--- a/src/css/app.css
+++ b/src/css/app.css
@@ -757,6 +757,11 @@ a:hover {
   color: var(--light);
 }
 
+.filtering {
+  font-size: 0.875rem;
+  color: black;
+}
+
 .btn-container {
   margin: 30px auto;
 }
@@ -906,7 +911,7 @@ a:hover {
 
 .listing-card .category {
   font-size: 0.75rem;
-  color: var(--dusk);
+  /*color: var(--dusk);*/
   text-transform: uppercase;
   margin: 0 0 0.25rem;
 }
@@ -919,7 +924,7 @@ a:hover {
 .listing-card .title {
   font-family: var(--heading-font);
   font-size: 1.5rem;
-  color: var(--dusk);
+  /*color: var(--dusk);*/
   margin: 0 0 0.25rem;
   overflow: hidden;
   display: -webkit-box;
